--- a/src/govuk/components/task-list/_index.scss
+++ b/src/govuk/components/task-list/_index.scss
@@ -14,8 +14,18 @@
     }
   }
 
+  // This uses table layout so that the task name and status always appear side-by-side, with the width of
+  // each 'column' being flexible depending upon the length of the task names and statuses.
+  //
+  // The position is set to 'relative' so than an absolutely-positioned transparent element box
+  // can be added within the link so that the whole row can be clickable.
   .govuk-task-list__item {
+    display: table;
+    position: relative;
+    width: 100%;
     margin-bottom: 0;
+    padding-top: govuk-spacing(2);
+    padding-bottom: govuk-spacing(2);
     border-bottom: 1px solid $govuk-border-colour;
   }
 
@@ -28,16 +38,6 @@
   // than just the visible link text.
   .govuk-task-list__item--with-link:hover {
     background: $govuk-task-list-hover-colour;
-  }
-
-  // This uses table layout so that the task name and status always appear side-by-side, with the width of
-  // each 'column' being flexible depending upon the length of the task names and statuses.
-  .govuk-task-list__item-container {
-    display: table;
-    position: relative;
-    width: 100%;
-    padding-top: govuk-spacing(2);
-    padding-bottom: govuk-spacing(2);
   }
 
   .govuk-task-list__task-name-and-hint {
