Spike IE-compatible config merging function

--- a/src/govuk/components/accordion/template.njk
+++ b/src/govuk/components/accordion/template.njk
@@ -1,8 +1,15 @@
 {% set id = params.id %}
 {% set headingLevel = params.headingLevel if params.headingLevel else 2 %}
 
-<div class="govuk-accordion {%- if params.classes %} {{ params.classes }}{% endif -%}" data-module="govuk-accordion" id="{{ id }}"
-{%- for attribute, value in params.attributes %} {{attribute}}="{{value}}"{% endfor %}>
+<div
+  class="govuk-accordion {%- if params.classes %} {{ params.classes }}{% endif -%}"
+  data-module="govuk-accordion"
+  id="{{ id }}"
+  {%- if params.showAllSectionsText %} data-i18n.show-all-sections="{{ params.showAllSectionsText }}"{% endif %}
+  {%- if params.hideAllSectionsText %} data-i18n.hide-all-sections="{{ params.hideAllSectionsText }}"{% endif %}
+  {%- if params.showSectionText %} data-i18n.show-section="{{ params.showSectionText }}"{% endif %}
+  {%- if params.hideSectionText %} data-i18n.hide-section="{{ params.hideSectionText }}"{% endif %}
+  {%- for attribute, value in params.attributes %} {{attribute}}="{{value}}"{% endfor %}>
   {% for item in params.items %}
     {% if item %}
       <div class="govuk-accordion__section {% if item.expanded %}govuk-accordion__section--expanded{% endif %}">
