Add ability to customise accordion toggle controls using data attributes
This function and the modified Element.prototype.dataset polyfill are taken from an earlier spike (govuk-frontend PR #2810)

Add new helper function to extract config keys by namespace

This is used to pull out the i18n-related configuration keys, so that they can be passed into the I18n function.

Add data attribute localisation support to Accordion

Write unit tests for mergeConfigs and extractConfigByNamespace

Amend extractConfigByNamespace to pass unit tests

Add Nunjucks parameter documentation

Add integration tests for localisation of the accordion

Change test -> it

Add whitespace control to Yaml values

Tweaking whitespace

Add data attribute template tests

--- a/src/govuk/components/accordion/template.njk
+++ b/src/govuk/components/accordion/template.njk
@@ -2,7 +2,11 @@
 {% set headingLevel = params.headingLevel if params.headingLevel else 2 %}
 
 <div class="govuk-accordion {%- if params.classes %} {{ params.classes }}{% endif -%}" data-module="govuk-accordion" id="{{ id }}"
-{%- for attribute, value in params.attributes %} {{attribute}}="{{value}}"{% endfor %}>
+  {%- if params.hideAllSectionsHtml %} data-i18n.hide-all-sections="{{ params.hideAllSectionsHtml | escape }}"{% endif %}
+  {%- if params.hideSectionHtml %} data-i18n.hide-section="{{ params.hideSectionHtml | escape }}"{% endif %}
+  {%- if params.showAllSectionsHtml %} data-i18n.show-all-sections="{{ params.showAllSectionsHtml | escape }}"{% endif %}
+  {%- if params.showSectionHtml %} data-i18n.show-section="{{ params.showSectionHtml | escape }}"{% endif %}
+  {%- for attribute, value in params.attributes %} {{attribute}}="{{value}}"{% endfor %}>
   {% for item in params.items %}
     {% if item %}
       <div class="govuk-accordion__section {% if item.expanded %}govuk-accordion__section--expanded{% endif %}">
