add complementary aria role to phase banner

--- a/app/views/partials/banner.njk
+++ b/app/views/partials/banner.njk
@@ -1,5 +1,5 @@
 {% if shouldShowAppBanner %}
-<div class="app-banner app-banner--warning" data-module="app-banner">
+<div class="app-banner app-banner--warning" data-module="app-banner" role="complementary">
   <div class="govuk-width-container">
     <p class="govuk-body">
       This is an internal development app.
