--- a/app/views/partials/exampleBanner.njk
+++ b/app/views/partials/exampleBanner.njk
@@ -1,5 +1,5 @@
 {% if shouldShowAppBanner %}
-<div class="app-banner app-banner--warning" data-module="app-banner">
+<div class="app-banner app-banner--warning" data-module="app-banner" role="complementary">
   <div class="govuk-width-container">
     <p class="govuk-body">
       This is not a real service, and is used for testing purposes only.
