Improve documentation and function naming
- Add missing JSDoc tags to helper functions
- Rework `renderAndInitialize` JSDoc description
- Refactor`componentNameToPascalCase` to split responsibilities
  of converting a component name (into `componentNameToJavaScriptClassName`)
  from pure string manipulation (into `kebabCaseToPascalCase`).

  Co-authored-by: Oliver Byford <oliver.byford@digital.cabinet-office.gov.uk>
  Co-authored-by: Brett Kyle <brett.kyle@digital.cabinet-office.gov.uk>

--- a/app/views/tests/boilerplate.njk
+++ b/app/views/tests/boilerplate.njk
@@ -9,8 +9,7 @@
     <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
     <h1 class="govuk-heading-l">Test boilerplate</h1>
     <p class="govuk-body">
-      Used for injecting rendered components from tests
-      and test specific configurations
+      Used during testing to inject rendered components and test specific configurations
     </p>
     <div id="slot"></div>
     <script src="/public/all.js"></script>
