Deprecate compatibility mode settings
This includes adding a private setting: `$_govuk-is-legacy-review-app` which is set to `true` in the legacy app stylesheets within the govuk-frontend local review app. We create this temporary dependancy so that warnings aren't fired locally but are fired for users where compatibility mode settings are true in their own sass.

--- a/app/assets/scss/app-legacy-ie8.scss
+++ b/app/assets/scss/app-legacy-ie8.scss
@@ -8,6 +8,11 @@ $govuk-compatibility-govukfrontendtoolkit: true;
 $govuk-compatibility-govuktemplate: true;
 $govuk-compatibility-govukelements: true;
 
+// Suppress compatibility mode deprecation warnings locally
+$govuk-suppressed-warnings: (
+  "compatibility-mode"
+);
+
 // Set Elements assets path
 $path: "/vendor/govuk_frontend_toolkit/assets/";
 
