--- a/app/views/all-components.njk
+++ b/app/views/all-components.njk
@@ -19,7 +19,7 @@
       All components
     </h1>
   </div>
-  {% for data in componentData %}
+  {% for data in componentsData %}
     {% set componentName = data.componentName %}
     {% set componentNameHuman = componentName | replace("-", " ") %}
     {{ showExamples(componentName, componentNameHuman, data, legacyQuery) }}
