--- a/app/views/component.njk
+++ b/app/views/component.njk
@@ -33,6 +33,6 @@
   </div>
 
   {% block examples %}
-    {{ showExamples(componentName, componentNameHuman, componentData,legacyQuery) }}
+    {{ showExamples(componentData, legacyQuery) }}
   {% endblock %}
 {% endblock %}
