Update `getFullPageExamples()` helper to use async file reads

--- a/app/views/full-page-examples/index.njk
+++ b/app/views/full-page-examples/index.njk
@@ -20,7 +20,7 @@
 
     <hr class="govuk-section-break govuk-section-break--l" />
 
-    {% for example in examples %}
+    {% for example in fullPageExamples %}
 
       <h2 class="govuk-heading-m"><a href="/full-page-examples/{{ example.path }}" class="govuk-link">{{ example.name | replace("-", " ") | capitalize }}</a></h2>
 
