Add $govuk-suppressed-warnings and the _warning mixin
These are a setting to record which sass warnings users suppressed and a means to interact with said settings respectively.

--- a/src/govuk/settings/_colours-palette.scss
+++ b/src/govuk/settings/_colours-palette.scss
@@ -34,8 +34,8 @@ $govuk-use-legacy-palette: if(
   $govuk-compatibility-govukfrontendtoolkit == false and
   $govuk-compatibility-govuktemplate == false and
   $govuk-compatibility-govukelements == false {
-  @warn "$govuk-use-legacy-palette is deprecated. " +
-    "Only the modern colour palette will be supported from v5.0";
+  @include _warning(legacy-palette, "$govuk-use-legacy-palette is deprecated. " +
+  "Only the modern colour palette will be supported from v5.0.");
 }
 
 /// Modern colour palette
