--- a/src/govuk/macros/i18n.njk
+++ b/src/govuk/macros/i18n.njk
@@ -4,7 +4,7 @@
  #
  # Helps reduce the boilerplate in component templates as they're quite verbose
  # @param {string} translationKey - The kebab-cased name of the translation key
- # @param {objet} pluralForms
+ # @param {object} pluralForms
  #   An object associating translation messages to the plural form they correspond to
  #   http://unicode.org/reports/tr35/tr35-numbers.html#Language_Plural_Rules
  #}
