Move “Sass documentation” to subheading

--- a/app/views/index.njk
+++ b/app/views/index.njk
@@ -37,8 +37,9 @@
       {% endfor %}
       </ul>
 
-      <h2 class="govuk-heading-m">Sass Documentation</h2>
+      <h2 class="govuk-heading-m">Documentation</h2>
 
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Sass documentation</h3>
       <ul class="govuk-list">
         <li><a href="https://frontend.design-system.service.gov.uk/sass-api-reference/" class="govuk-link">Latest release</a></li>
         {% if not isDeployedToHeroku %}
