--- a/app/views/index.njk
+++ b/app/views/index.njk
@@ -42,7 +42,7 @@
       <h3 class="govuk-heading-s govuk-!-margin-bottom-2">Sass documentation</h3>
       <ul class="govuk-list">
         <li><a href="https://frontend.design-system.service.gov.uk/sass-api-reference/" class="govuk-link">Latest release</a></li>
-        {% if not isDeployedToHeroku %}
+        {% if not flags.isDeployedToHeroku %}
         <li><a href="/docs" class="govuk-link">Local version</a></li>
         {% endif %}
       </ul>
