Add JS docs to `/docs/javascript`

--- a/app/views/index.njk
+++ b/app/views/index.njk
@@ -46,6 +46,11 @@
         <li><a href="/docs/sass" class="govuk-link">Local version</a></li>
         {% endif %}
       </ul>
+
+      <h3 class="govuk-heading-s govuk-!-margin-bottom-2">JavaScript documentation</h3>
+      <ul class="govuk-list">
+        <li><a href="/docs/javascript" class="govuk-link">Local version</a></li>
+      </ul>
     </div>
   </div>
 {% endblock %}
