Set the language for the 'Translated' example page

--- a/app/views/examples/translated/index.njk
+++ b/app/views/examples/translated/index.njk
@@ -1,3 +1,5 @@
+{% set htmlLang = 'cy-GB' %}
+
 {% from "accordion/macro.njk" import govukAccordion %}
 {% from "back-link/macro.njk" import govukBackLink %}
 {% from "breadcrumbs/macro.njk" import govukBreadcrumbs %}
