Rebase Hide this Page component

--- a/src/govuk/components/_all.scss
+++ b/src/govuk/components/_all.scss
@@ -15,8 +15,9 @@
 @import "fieldset/index";
 @import "file-upload/index";
 @import "footer/index";
-@import "hint/index";
 @import "header/index";
+@import "hide-this-page/index";
+@import "hint/index";
 @import "input/index";
 @import "inset-text/index";
 @import "label/index";
