Inject button content with textContent rather than innerHTML

--- a/app/views/examples/translated/index.njk
+++ b/app/views/examples/translated/index.njk
@@ -945,8 +945,10 @@
           showAllSections: "Dangos adrannau",
           hideAllSections: "Cuddio adrannau",
         },
-        "i18n.showSection": "Dangos<span class=\"govuk-visually-hidden\"> adran</span>",
-        "i18n.hideSection": "Cuddio<span class=\"govuk-visually-hidden\"> adran</span>",
+        "i18n.showSection": "Dangos",
+        "i18n.showSectionAriaLabel": "Dangos adran",
+        "i18n.hideSection": "Cuddio",
+        "i18n.hideSectionAriaLabel": "Cuddio adran"
       }
     })
   </script>
