--- a/app/views/examples/translated/index.njk
+++ b/app/views/examples/translated/index.njk
@@ -110,7 +110,6 @@
     name: "with-hint",
     id: "with-hint",
     maxlength: 200,
-    fallbackHintText: "Gallwch ddefnyddio hyd at %{count} nod",
     label: {
       text: "Allwch chi roi mwy o fanylion?",
       classes: "govuk-label--l",
@@ -118,6 +117,52 @@
     },
     hint: {
       text: "Peidiwch â chynnwys gwybodaeth bersonol neu ariannol fel eich rhif Yswiriant Gwladol neu fanylion eich cerdyn credyd."
+    },
+    fallbackHintText: "Gallwch ddefnyddio hyd at %{count} nod",
+    charactersUnderLimitHtml: {
+      one: "Mae gennych %{count} nod ar ôl",
+      two: "Mae gennych %{count} nod ar ôl",
+      few: "Mae gennych %{count} nod ar ôl",
+      many: "Mae gennych %{count} nod ar ôl",
+      other: "Mae gennych %{count} nod ar ôl"
+    },
+    charactersAtLimitHtml: "Mae gennych 0 nod ar ôl",
+    charactersOverLimitHtml: {
+      one: "Mae gennych %{count} nod yn ormod",
+      two: "Mae gennych %{count} nod yn ormod",
+      few: "Mae gennych %{count} nod yn ormod",
+      many: "Mae gennych %{count} nod yn ormod",
+      other: "Mae gennych chi %{count} nod yn ormod"
+    }
+  }) }}
+
+  {{ govukCharacterCount({
+    name: "with-words",
+    id: "with-words",
+    maxwords: 10,
+    label: {
+      text: "Allwch chi roi mwy o fanylion?",
+      classes: "govuk-label--l",
+      isPageHeading: true
+    },
+    fallbackHintText: "Gallwch ddefnyddio hyd at %{count} gair",
+    hint: {
+      text: "Peidiwch â chynnwys gwybodaeth bersonol neu ariannol fel eich rhif Yswiriant Gwladol neu fanylion eich cerdyn credyd."
+    },
+    wordsUnderLimitHtml: {
+      one: "Mae gennych %{count} gair ar ôl",
+      two: "Mae gennych %{count} air ar ôl",
+      many: "Mae gennych %{count} o eiriau ar ôl",
+      few: "Mae gennych %{count} o eiriau ar ôl",
+      other: "Mae gennych %{count} o eiriau ar ôl"
+    },
+    wordsAtLimitHtml: "Mae gennych 0 gair ar ôl",
+    wordsOverLimitHtml: {
+      one: "Mae gennych %{count} gair yn ormod",
+      two: "Mae gennych %{count} air yn ormod",
+      many: "Mae gennych %{count} o eiriau yn ormod",
+      few: "Mae gennych %{count} o eiriau yn ormod",
+      other: "Mae gennych %{count} o eiriau yn ormod"
     }
   }) }}
 
