Generate prototype kit config into `./package`
Includes missing components and new locations for init styles/scripts

--- a/src/govuk-prototype-kit/init.scss
+++ b/src/govuk-prototype-kit/init.scss
@@ -9,4 +9,4 @@ $govuk-assets-path: if(
 $govuk-global-styles: true !default;
 $govuk-new-link-styles: true !default;
 
-@import "all";
+@import "../govuk/all";
