Spike placing EtP button outside of the grid container

--- a/src/govuk/components/hide-this-page/_index.scss
+++ b/src/govuk/components/hide-this-page/_index.scss
@@ -2,7 +2,7 @@
 
 @include govuk-exports("govuk/component/hide-this-page") {
   .govuk-hide-this-page {
-    position: fixed;
+    position: sticky;
     z-index: 1000;
     top: 0;
     left: 0;
