--- a/src/govuk/components/hide-this-page/_index.scss
+++ b/src/govuk/components/hide-this-page/_index.scss
@@ -2,6 +2,7 @@
 
 @include govuk-exports("govuk/component/hide-this-page") {
   .govuk-hide-this-page {
+    @include govuk-responsive-padding(8, "bottom");
     position: sticky;
     z-index: 1000;
     top: 0;
