EtP spike fixes for Internet Explorer 8
Internet Explorer 8 does not support querySelectors using :nth-child, apparently.

Likewise, it doesn't seem to play nicely with our use of the currentcolor keyword.

The classList polyfill was missing from hide-this-page.mjs despite being used within the component.

--- a/src/govuk/components/hide-this-page/_index.scss
+++ b/src/govuk/components/hide-this-page/_index.scss
@@ -43,12 +43,12 @@
     width: .5em;
     height: .5em;
     margin: 0 .125em;
-    border: 2px solid currentcolor;
+    border: 2px solid govuk-colour("white");
     border-radius: 50%;
   }
 
   .govuk-hide-this-page__indicator-light--on {
-    background-color: currentcolor;
+    background-color: govuk-colour("white");
   }
 
   @media only print {
