Progressively enhance position: sticky
Re-establishes the position: fixed fallback for old browsers (i.e. IE). By nature this could cover up other elements on the page, however we feel that this is a trade-off worth having in order to maintain the
availability of the EtP button as the user scrolls the page.

--- a/src/govuk/components/hide-this-page/_index.scss
+++ b/src/govuk/components/hide-this-page/_index.scss
@@ -2,12 +2,15 @@
 
 @include govuk-exports("govuk/component/hide-this-page") {
   .govuk-hide-this-page {
-    @include govuk-responsive-padding(8, "bottom");
-    position: sticky;
+    position: fixed;
     z-index: 1000;
     top: 0;
     left: 0;
     width: 100%;
+    @supports (position: sticky) {
+      @include govuk-responsive-padding(8, "bottom");
+      position: sticky;
+    }
 
     @include govuk-media-query($from: tablet) {
       display: inline-block;
