Add bottom margin to the component
Thanks @sussexrick for the suggestion!

--- a/src/govuk/components/task-list/_index.scss
+++ b/src/govuk/components/task-list/_index.scss
@@ -6,7 +6,7 @@
   .govuk-task-list {
     @include govuk-font($size: 19);
     margin-top: 0;
-    margin-bottom: 0;
+    @include govuk-responsive-margin(6, "bottom");
     padding: 0;
     list-style-type: none;
     @include govuk-media-query($from: tablet) {
