--- a/src/govuk/components/_all.scss
+++ b/src/govuk/components/_all.scss
@@ -11,11 +11,11 @@
 @import "details/index";
 @import "error-message/index";
 @import "error-summary/index";
+@import "exit-this-page/index";
 @import "fieldset/index";
 @import "file-upload/index";
 @import "footer/index";
 @import "header/index";
-@import "hide-this-page/index";
 @import "hint/index";
 @import "input/index";
 @import "inset-text/index";
