Fix EditorConfig errors in `*.njk`

--- a/app/views/full-page-examples/cookie-banner-essential-cookies/index.njk
+++ b/app/views/full-page-examples/cookie-banner-essential-cookies/index.njk
@@ -153,8 +153,10 @@ notes: >-
     </div>
   </div>
 
-{# As the cookie banner component does not currently include JavaScript, we have to take care of the 'Hide' button to make progressive enhancement in the example functional #}
- <script>
+  {# As the cookie banner component does not currently include JavaScript, we
+    have to take care of the 'Hide' button to make progressive enhancement in
+    the example functional #}
+  <script>
     var hideButton = document.querySelector('.js-hide')
     var cookieBanner = document.querySelector(".govuk-cookie-banner")
 
