Template code style
Co-authored-by: Simon Whatley <23444+simonwhatley@users.noreply.github.com>

--- a/src/govuk/components/task-list/template.njk
+++ b/src/govuk/components/task-list/template.njk
@@ -5,7 +5,7 @@
       {%- set hintId = idPrefix + "-" + loop.index + "-hint" -%}
     {% endif %}
     {%- set statusId = idPrefix + "-" + loop.index + "-status" -%}
-    <li class="govuk-task-list__item{% if item.href %} govuk-task-list__item--with-link{% endif %}">
+    <li class="govuk-task-list__item {%- if item.href %} govuk-task-list__item--with-link{% endif %}">
       <div class="govuk-task-list__task-name-and-hint">
         {% if item.href %}
           <a class="govuk-link govuk-task-list__link" href="{{ item.href }}" aria-describedby="{{ hintId + " " if item.hint }}{{ statusId }}">{{ item.title.html | safe if item.title.html else item.title.text }}</a>
