Fix missing legacy query links
The query `?legacy=true` is lost when clicking back

--- a/app/views/component.njk
+++ b/app/views/component.njk
@@ -17,8 +17,13 @@
 {% block beforeContent %}
   {{ govukBreadcrumbs({
     "items": [
-    { text: 'GOV.UK Frontend', href: '/' + legacyQuery },
-    { text: componentNameHuman | capitalize }
+      {
+        text: 'GOV.UK Frontend',
+        href: "/" + legacyQuery
+      },
+      {
+        text: componentNameHuman | capitalize
+      }
     ]
   }) }}
 {% endblock %}
