--- a/app/views/examples/template-custom/index.njk
+++ b/app/views/examples/template-custom/index.njk
@@ -92,7 +92,7 @@
     html: 'C\'est un nouveau service - vos <a class="govuk-link" href="#">commentaires</a> nous aideront à l\'améliorer.'
   }) }}
   {{ govukBackLink({
-    "href": "/"
+    href: "/" + legacyQuery
   }) }}
   <!-- endblock:beforeContent -->
 {% endblock %}
