Fix search example form submit
Include search text input and sort options in form so they’re submitted when the button is pressed

--- a/app/views/full-page-examples/search/index.njk
+++ b/app/views/full-page-examples/search/index.njk
@@ -47,6 +47,7 @@ notes: >-
 {% endblock %}
 
 {% block content %}
+<form method="get" novalidate>
   <h1 class="govuk-heading-xl">{{ pageTitle }}</h1>
 
   {{ govukInput({
@@ -96,7 +97,7 @@ notes: >-
         }) }}
 
         {{ govukButton({
-            text: "Update filters"
+          text: "Update filters"
         }) }}
       </form>
     </div>
@@ -190,4 +191,5 @@ notes: >-
       }) }}
     </div>
   </div>
+</form>
 {% endblock %}
