Organise `public` into assets/stylesheets/javascripts
This is a quick way to simplify our Sass compilation rules whilst organising `public` at the same time

--- a/app/stylesheets/app.scss
+++ b/app/stylesheets/app.scss
@@ -1,7 +1,7 @@
 $govuk-show-breakpoints: true;
 $govuk-new-link-styles: true;
 
-@import "../../../src/govuk/all";
+@import "../../src/govuk/all";
 @import "partials/app";
 @import "partials/banner";
 @import "partials/prose";
