--- a/app/views/tests/boilerplate.njk
+++ b/app/views/tests/boilerplate.njk
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <title>Test Boilerplate</title>
-    <link rel="stylesheet" href="/public/app.min.css">
+    <link rel="stylesheet" href="/stylesheets/app.min.css">
   </head>
   <body>
     <script>document.body.className = ((document.body.className) ? document.body.className + ' js-enabled' : 'js-enabled');</script>
@@ -12,6 +12,6 @@
       Used during testing to inject rendered components and test specific configurations
     </p>
     <div id="slot"></div>
-    <script src="/public/all.min.js"></script>
+    <script src="/javascripts/all.min.js"></script>
   </body>
 </html>
