--- a/app/views/examples/scoped-initialisation/index.njk
+++ b/app/views/examples/scoped-initialisation/index.njk
@@ -4,10 +4,10 @@
 
 {% block head %}
   <!--[if !IE 8]><!-->
-    <link rel="stylesheet" href="/public/app.min.css">
+    <link rel="stylesheet" href="/stylesheets/app.min.css">
   <!--<![endif]-->
   <!--[if IE 8]>
-    <link rel="stylesheet" href="/public/app-ie8.min.css">
+    <link rel="stylesheet" href="/stylesheets/app-ie8.min.css">
   <![endif]-->
   <!--[if lt IE 9]>
     <script src="/vendor/html5-shiv/html5shiv.min.js"></script>
@@ -53,7 +53,7 @@
 {% endblock %}
 
 {% block bodyEnd %}
-  <script src="/public/all.min.js"></script>
+  <script src="/javascripts/all.min.js"></script>
   <script>
     var $scope = document.getElementById('scoped')
     window.GOVUKFrontend.initAll({
