--- a/app/views/examples/template-default/index.njk
+++ b/app/views/examples/template-default/index.njk
@@ -2,10 +2,10 @@
 
 {% block head %}
   <!--[if !IE 8]><!-->
-    <link rel="stylesheet" href="/public/app.min.css">
+    <link rel="stylesheet" href="/stylesheets/app.min.css">
   <!--<![endif]-->
   <!--[if IE 8]>
-    <link rel="stylesheet" href="/public/app-ie8.min.css">
+    <link rel="stylesheet" href="/stylesheets/app-ie8.min.css">
   <![endif]-->
   <!--[if lt IE 9]>
     <script src="/vendor/html5-shiv/html5shiv.min.js"></script>
@@ -20,6 +20,6 @@
 
 
 {% block bodyEnd %}
-  <script src="/public/all.min.js"></script>
+  <script src="/javascripts/all.min.js"></script>
   <script>window.GOVUKFrontend.initAll()</script>
 {% endblock %}
