--- a/app/views/examples/translated/index.njk
+++ b/app/views/examples/translated/index.njk
@@ -937,7 +937,7 @@
 {% endblock %}
 
 {% block bodyEnd %}
-  <script src="/public/all.min.js"></script>
+  <script src="/javascripts/all.min.js"></script>
   <script>
     window.GOVUKFrontend.initAll({
       accordion: {
